--- a/eventos-no-html/index.html
+++ b/eventos-no-html/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -6,28 +6,37 @@
     <title>Document</title>
 </head>
 <body>
-    <form>
-        <label for="onMouseEnter">Entrada do Mouse:</label>
-        <input type="text" id="onMouseEnter" onmouseenter="mouseEvent()">
-        <br><br>
+    <h1>Eventos no HTML</h1>
 
+    <div>
+        <label for="onMouseEnter">Entrada do mouse:</label>
+        <input type="text" id="onMouseEnter" onmouseenter="mouseEnterEvent()">
+    </div>
+    <br><br>
+
+    <div>
         <label for="onChange">Mudança de valor:</label>
         <input type="text" id="onChange" onchange="changeEvent()">
-        <br><br>
+    </div>
+    <br><br>
 
+    <div>
         <label for="onFocus">Entrada de Foco:</label>
-        <input type="text" id="onFocus" onfocus="focusEvent()">
-        <br><br>
+        <input type="text" " id="onFocus" onfocus="focusEvent()">
+    </div>
+    <br><br>
 
-        <label for="onBlur">Saída de Foco:</label>
+    <div>
+        <label for="onBlur">Saída de foco:</label>
         <input type="text" id="onBlur" onblur="blurEvent()">
-        <br><br>
+    </div>
+    <br><br>
 
-        <button onclick="clickEvent()">
-            Clique-me!
-        </button>
-    </form>
-    
+    <div>
+        <button onclick="clickEvent()">Clique aqui</button>
+    </div>
+
     <script src="index.js"></script>
 </body>
-</html>
+</html> 
+
