--- a/valores-do-dom-para-o-js/index.html
+++ b/valores-do-dom-para-o-js/index.html
@@ -12,7 +12,7 @@
     <h2>Register!</h2>
     <section>
         <label for="usarname">Usarname:</label>
-        <input type="text" name="usarname" id="usarname">
+        <input type="text" name="usarname" id="usarame">
         <br>
         <label for="password">Password:</label>
         <input type="text" name="password" id="password">
