--- a/trabalhando-com-form-js/index.html
+++ b/trabalhando-com-form-js/index.html
@@ -8,65 +8,65 @@
   <script src="./index.js" defer></script>
 </head>
 <body>
-  <h1>Working with forms</h1>
+  <h1>Trabalhando Com Formulários</h1>
   <hr>
 
-  <h2>Assemble order</h2>
+  <h2>Montar Pedido</h2>
 
   <form id="orderForm">
-    <label for="name">Name:</label>
+    <label for="name">Nome:</label>
     <br>
     <input type="text" name="name" id="name">
     <br><br>
 
-    <label for="address">Delivery address:</label>
+    <label for="address">Endereço de Entrega:</label>
     <br>
     <input type="text" name="address" id="address">
     <br><br>
 
-    <label for="breadType">Bread type</label>
+    <label for="breadType">Tipo de Pão</label>
     <br>
     <select name="breadType" id="breadType">
-      <option selected disabled>Selected an option...</option>
-      <option value="3 cheese">3 cheese</option>
-      <option value="Parmesan e oregano">Parmesan and oregano</option>
-      <option value="9 grains">9 grains</option>
-      <option value="White italian">White italian</option>
-      <option value="Salt granola">Salt granola </option>
-      <option value="Temperate butter">Temperate butter</option>
+      <option selected disabled>Selecione uma opção...</option>
+      <option value="3 queijos">3 queijos</option>
+      <option value="Parmesão e orégano">Parmesão e orégano</option>
+      <option value="9 grãos">9 grãos</option>
+      <option value="Italiano branco">Italiano branco</option>
+      <option value="Granola salgada">Granola salgada</option>
+      <option value="Manteiga temperada">Manteiga temperada</option>
     </select>
     <br><br>
 
-    <label for="main">Main:</label>
+    <label for="main">Principal:</label>
     <br>
-    <input type="radio" name="main" id="main1" value="Meat">
-    <label for="main1">Meat</label>
-    <input type="radio" name="main" id="main2" value="Chicken">
-    <label for="main2">Chicken</label>
-    <input type="radio" name="main" id="main3" value="Vegan">
-    <label for="main3">Vegan</label>
+    <input type="radio" name="main" id="main1" value="Carne">
+    <label for="main1">Carne</label>
+    <input type="radio" name="main" id="main2" value="Frango">
+    <label for="main2">Frango</label>
+    <input type="radio" name="main" id="main3" value="Vegano">
+    <label for="main3">Vegano</label>
     <br><br>
 
-    <label for="salad">Salad:</label>
+    <label for="salad">Salada:</label>
     <br>
-    <input type="checkbox" name="salad" id="salad1" value="Lettuce">
-    <label for="salad1">lettuce</label>
-    <input type="checkbox" name="salad" id="salad2" value="Tomato">
-    <label for="salad2">Tomato</label>
-    <input type="checkbox" name="salad" id="salad3" value="Olives">
-    <label for="salad3">Olives</label>
-    <input type="checkbox" name="salad" id="salad4" value="Carrot">
-    <label for="salad4">Carrot</label>
-    <input type="checkbox" name="salad" id="salad5" value="Pickles">
-    <label for="salad5">Pickles</label>
+    <input type="checkbox" name="salad" id="salad1" value="Alface">
+    <label for="salad1">Alface</label>
+    <input type="checkbox" name="salad" id="salad2" value="Tomate">
+    <label for="salad2">Tomate</label>
+    <input type="checkbox" name="salad" id="salad3" value="Azeitonas">
+    <label for="salad3">Azeitonas</label>
+    <input type="checkbox" name="salad" id="salad4" value="Cenoura">
+    <label for="salad4">Cenoura</label>
+    <input type="checkbox" name="salad" id="salad5" value="Picles">
+    <label for="salad5">Picles</label>
     <br><br>
 
-    <label for="observations">Observations:</label>
+    <label for="observations">Observações:</label>
     <br>
-    <textarea name="observations" id="observations" cols="30" rows="6" placeholder="Observations..."></textarea>
+    <textarea name="observations" id="observations" cols="30" rows="6"></textarea>
     <br><br>
 
-    <button type="submit">Close order</button>
+    <button type="submit">Fechar Pedido</button>
   </form>
 </body>
 </html>
